--- a/public/style.css
+++ b/public/style.css
@@ -72,7 +72,7 @@ body {
 
 .description p {
   padding: 8px;
-  margin: 0;
+  margin: 10px 0;
   color: #293251;
   text-align: center;
   font-size: 1.2em;
